# omarchy-world-clock

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
app/omarchy_world_clock/: __init__.py  cli.py  configuration.py  core.py  layout.py  popup.py  waybar.py
docs/: porting-notes.md  release.md  specs.md
packaging/aur/: README.md
packaging/aur/omarchy-world-clock-bin/: .SRCINFO  LICENSE  PKGBUILD  omarchy-world-clock-bin.install
rust/: Cargo.toml  README.md  install.sh
rust/src/: config.rs  main.rs  popup.rs  runtime.rs  theme.rs  time.rs  waybar.rs
scripts/: ci.sh  release.sh  signoff.sh
src/: config.rs  layout.rs  lib.rs  main.rs  popup.rs  runtime.rs  theme.rs  time.rs  waybar.rs
tests/: cli_waybar.rs  install.sh  test_cli.py  test_core.py  test_layout.py  test_waybar.py  uninstall.sh
