[package]
name = "omarchy-world-clock-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omarchy-world-clock-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
gtk4-layer-shell = "0.8"
iana-time-zone = "0.1"
libc = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
